--- a/ParserExist/ParserExist.csproj
+++ b/ParserExist/ParserExist.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{7F78C1EC-0001-4DB9-A9B5-62159B3F3385}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WindowsFormsApplication1</RootNamespace>
+    <RootNamespace>Vmax44Parser</RootNamespace>
     <AssemblyName>ParserExist</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
@@ -84,11 +84,6 @@
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
     <Compile Include="Parser.cs" />
-    <Compile Include="ParserDataDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ParserDataDataSet.xsd</DependentUpon>
-    </Compile>
     <Compile Include="ParserExist.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -115,17 +110,6 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
-    <None Include="ParserDataDataSet.xsc">
-      <DependentUpon>ParserDataDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="ParserDataDataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>ParserDataDataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="ParserDataDataSet.xss">
-      <DependentUpon>ParserDataDataSet.xsd</DependentUpon>
-    </None>
     <None Include="Properties\DataSources\dataCollection.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -165,11 +149,6 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="ParserData.sdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
