--- a/ParserExist/app.config
+++ b/ParserExist/app.config
@@ -3,7 +3,15 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="WindowsFormsApplication1.Properties.Settings.ParserDataConnectionString" connectionString="Data Source=|DataDirectory|\ParserData.sdf" providerName="Microsoft.SqlServerCe.Client.3.5" />
+    <add name="WindowsFormsApplication1.Properties.Settings.ParserDataConnectionString"
+      connectionString="Data Source=|DataDirectory|\ParserData.sdf"
+      providerName="Microsoft.SqlServerCe.Client.3.5" />
+    <add name="Vmax44Parser.Properties.Settings.ParserDataConnectionString"
+      connectionString="Data Source=|DataDirectory|\ParserData.sdf"
+      providerName="Microsoft.SqlServerCe.Client.3.5" />
+    <add name="Vmax44Parser.Properties.Settings.vmax44parserConnectionString"
+      connectionString="Data Source=(local)\SQLEXPRESS;Initial Catalog=vmax44parser;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
