--- a/ParserExist/app.config
+++ b/ParserExist/app.config
@@ -2,6 +2,10 @@
 <configuration>
   <configSections>
   </configSections>
+  <appSettings>
+    <add key="provider" value="System.Data.SqlClient" />
+    <add key="Data Source=(local)\SQLEXPRESS;Initial Catalog=vmax44parser;Integrated Security=True"/>
+  </appSettings>
   <connectionStrings>
     <add name="WindowsFormsApplication1.Properties.Settings.ParserDataConnectionString"
       connectionString="Data Source=|DataDirectory|\ParserData.sdf"
