--- a/ParserExist/ParserExist.csproj
+++ b/ParserExist/ParserExist.csproj
@@ -117,6 +117,7 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\DataSources\dataCollection.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
