--- a/ParserExist/app.config
+++ b/ParserExist/app.config
@@ -4,20 +4,27 @@
   </configSections>
   <appSettings>
     <add key="provider" value="System.Data.SqlClient" />
-    <add key="Data Source=(local)\SQLEXPRESS;Initial Catalog=vmax44parser;Integrated Security=True"/>
+    <add key="Data Source=(local)\SQLEXPRESS;Initial Catalog=vmax44parser;Integrated Security=True" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <connectionStrings>
-    <add name="WindowsFormsApplication1.Properties.Settings.ParserDataConnectionString"
-      connectionString="Data Source=|DataDirectory|\ParserData.sdf"
-      providerName="Microsoft.SqlServerCe.Client.3.5" />
-    <add name="Vmax44Parser.Properties.Settings.ParserDataConnectionString"
-      connectionString="Data Source=|DataDirectory|\ParserData.sdf"
-      providerName="Microsoft.SqlServerCe.Client.3.5" />
-    <add name="Vmax44Parser.Properties.Settings.vmax44parserConnectionString"
-      connectionString="Data Source=(local)\SQLEXPRESS;Initial Catalog=vmax44parser;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="WindowsFormsApplication1.Properties.Settings.ParserDataConnectionString" connectionString="Data Source=|DataDirectory|\ParserData.sdf" providerName="Microsoft.SqlServerCe.Client.3.5" />
+    <add name="Vmax44Parser.Properties.Settings.ParserDataConnectionString" connectionString="Data Source=|DataDirectory|\ParserData.sdf" providerName="Microsoft.SqlServerCe.Client.3.5" />
+    <add name="Vmax44Parser.Properties.Settings.vmax44parserConnectionString" connectionString="Data Source=(local)\SQLEXPRESS;Initial Catalog=vmax44parser;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
