--- a/ParserExist/ParserExist.csproj
+++ b/ParserExist/ParserExist.csproj
@@ -84,6 +84,7 @@
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
     <Compile Include="Parser.cs" />
+    <Compile Include="ParserWatin.cs" />
     <Compile Include="ParserAutodoc.cs" />
     <Compile Include="ParserExist.cs" />
     <Compile Include="Form1.cs">
@@ -94,6 +95,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PType.cs" />
     <Compile Include="vmax44parserDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
