--- a/ParserSite/ParserSite.csproj
+++ b/ParserSite/ParserSite.csproj
@@ -332,6 +332,12 @@
       <DependentUpon>201507121854479_add required to partnumber.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ParserLibrary\ParserLibrary.csproj">
+      <Project>{90fb7556-c09c-4f3f-a7a8-c9f48127b06e}</Project>
+      <Name>ParserLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
