--- a/ParserSite/ParserSite.csproj
+++ b/ParserSite/ParserSite.csproj
@@ -322,6 +322,7 @@
     <Content Include="Views\Shared\_PartsPartial.cshtml" />
     <Content Include="Views\Parts\Create.cshtml" />
     <Content Include="Views\ParsedDatas\Parse.cshtml" />
+    <Content Include="Views\ParsedDatas\StartParse.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
